<resources>
    <string name="app_name">GPSLogger</string>
    <string name="settings_screen_name">GPSLogger Ayarlar</string>
    <string name="ok">Tamam</string>
    <string name="cancel">İptal</string>
    <string name="could_not_write_to_file">Dosyaya Yazılamıyor</string>
    <string name="description_added">Açıklama dosyaya eklendi</string>
    <string name="not_yet">Henüz Değil</string>
    <string name="cant_add_description_until_next_point">You can\'t add a description until the next point has been
        logged to a file.
    </string>
    <string name="add_description">Açıklama gir</string>
    <string name="letters_numbers">Sadece harf ve rakam kullanın</string>
    <string name="numbers">Kat bilgisi girin</string>
    <string name="add_descriptionzaman">Zaman Girisi</string>
    <string name="numberszaman">Saniye olarak zamanı girin</string>
    <string name="add_descriptionheight">Kat Yüksekliği Girisi</string>
    <string name="numbersheight">Kat Yüksekliği girin (m)</string>
    <string name="menu_settings">Ayarlar</string>
	<string name="floor_info">Kat Bilgisi Verilemiyor</string>
	<string name="temp_info">Sıcaklık Sensörü Yok</string>
	<string name="humidty_info">Nem Sensörü Yok</string>
	<string name="north_i">K</string>
	<string name="south_i">G</string>
	<string name="west_i">B</string>
	<string name="east_i">D</string>
	<string name="verigirisi">Basınç Uzun Süredir Aynı Kat Bilgisi Girmek İsterseniz Uygulamaya Gidiniz </string>
	<string name="verigirisiana">Kat Bilgisi </string>
    <string name="menu_annotate">Annotate</string>
    <string name="menu_share">Paylaş</string>
    <string name="menu_exit">Çık</string>
    <string name="menu_export">Dışarı Ver</string>
    <string name="menu_dell">Veritabanını Temizle</string>
    <string name="menu_floorinfo">Kat Bilgisi Giriniz</string>
    <string name="menu_zamaninfo">Ölçme Aralığı Giriniz (sn)</string>
    <string name="menu_heightinfo">Kat Yüksekliği Giriniz (m)</string>
    <string name="txt_latitude">Enlem: </string>
    <string name="txt_longitude">Boylam: </string>
    <string name="txt_pressure">Basınç: </string>
    <string name="txt_oheight">B.Yükseklik: </string>
    <string name="txt_temperature">Sıcaklık: </string>
    <string name="txt_humidity">Nem: </string>
    <string name="ble_pressure">BLE Basınç: </string>
    <string name="ble_temperature">BLE Sıcaklık: </string>
    <string name="ble_humidity">BLE Nem: </string>
    <string name="txt_floor">Bulunduğunuz Kat: </string>
    <string name="txt_katdegis">Kat Değişimi: </string>
    <string name="txt_altitude">Elipsoidal Yükseklik: </string>
    <string name="txt_speed">Hız: </string>
    <string name="txt_direction">Yön: </string>
    <string name="txt_satellites">Uydu Sayısı: </string>
    <string name="txt_accuracy">Doğruluk: </string>
    <string name="txt_travel_distance">Katedilen Mesafe: </string>
    <string name="btn_start_logging">Kaydet</string>
    <string name="btn_stop_logging">Durdur</string>
    <string name="gpslogger_still_running">GPSLogger çalışıyor.</string>
    <string name="summary_loggingto">Kayıt Yeri:</string>
    <string name="summary_loggingto_screen">Kaydedilmiyor</string>
    <string name="summary_freq_every">Kayıt Sıklığı:</string>
    <string name="summary_freq_max">maksimum</string>
    <string name="summary_dist">Mesafe: </string>
    <string name="summary_dist_regardless">maksimum</string>
    <string name="summary_current_filename">Dosya:</string>
    <string name="summary_current_filename_format">%s (Seçilen Klasörde)</string>
    <string name="sharing_location_only">Sadece Konum</string>
    <string name="sharing_pick_file">Paylaşmak için dosya seç</string>
    <string name="sharing_mylocation">Konumum </string>
    <string name="sharing_googlemaps_link" formatted="false">http://maps.google.com/maps?q=%s,%s</string>
    <string name="sharing_via">Paylaşım Yolu</string>
    <string name="foot">&#160;foot</string>
    <string name="feet">&#160;feet</string>
    <string name="meter">&#160;metre</string>
    <string name="meters">&#160;metre</string>
    <string name="error">Hata</string>
    <string name="error_connection">Bağlantı Hatası.</string>
    <string name="gpsprovider_unavailable">Konum sağlayıcı çalıştırılamadı. </string>
    <string name="started">Başladı</string>
    <string name="providername_using">&#160;&#160;&#160;&#160;(%s Kullanılıyor)</string>
    <string name="providername_gps">GPS </string>
    <string name="providername_celltower">Baz İstasyonu</string>
    <string name="not_applicable">n/a</string>
    <string name="meters_per_second">&#160;m/s</string>
    <string name="feet_per_second">&#160;ft/s</string>
    <string name="mbar">&#160;mbar</string>
    <string name="miles_per_hour">&#160;mi/h</string>
    <string name="miles">&#160;mi</string>
    <string name="kilometers_per_hour">&#160;km/h</string>
    <string name="kilometers">&#160;km</string>
    <string name="unknown_direction">bilinmiyor</string>
    <string name="sorry">Başarılamadı</string>
    <string name="success">Yay!</string>
    <string name="direction_roughly">Yaklaşık %s</string>
    <string name="direction_north">Kuzey</string>
    <string name="direction_northnortheast">Kuzey Kuzeydoğu</string>
    <string name="direction_northeast">Kuzeydoğu</string>
    <string name="direction_eastnortheast">Doğu Kuzeydoğu</string>
    <string name="direction_east">Doğu</string>
    <string name="direction_eastsoutheast">Doğu Güneydoğu</string>
    <string name="direction_southeast">Güneydoğu</string>
    <string name="direction_southsoutheast">Güney Güneydoğu</string>
    <string name="direction_south">Güney</string>
    <string name="direction_southsouthwest">Güney Güneybatı</string>
    <string name="direction_southwest">Güneybatı</string>
    <string name="direction_westsouthwest">Batı Güneybatı</string>
    <string name="direction_west">Batı</string>
    <string name="direction_westnorthwest">Batı Kuzeybatı</string>
    <string name="direction_northwest">Kuzeybatı</string>
    <string name="direction_northnorthwest">Kuzey Kuzeybatı</string>
    <string name="time_onesecond">1 saniye</string>
    <string name="time_halfminute">&#189; dakika</string>
    <string name="time_oneminute">1 dakika</string>
    <string name="time_onehour">1 saat</string>
    <string name="time_quarterhour">15 dakika</string>
    <string name="time_halfhour">&#189; saat</string>
    <string name="time_oneandhalfhours">1&#189; saat</string>
    <string name="time_twoandhalfhours">2&#189; saat</string>
    <string name="time_hms_format" formatted="false">%sh %sm %ss</string>
    <string name="accuracy_within" formatted="false"> %s %s</string>
    <string name="error_displaying">Error in displaying location info: %s</string>
    <string name="degree_symbol">&#176;</string>
    <string name="settings_distance_in_feet">Distance in feet</string>
    <string name="settings_enter_feet">Enter feet(max 9999)</string>
    <string name="settings_distance_in_meters">Distance in meters</string>
    <string name="settings_accuracy_in_meters">Accuracy in meters</string>
    <string name="settings_accuracy_in_feet">Accuracy in feet</string>
    <string name="settings_enter_meters">Enter meters(max 9999)</string>
    <string name="settings_converting_title">Converting…</string>
    <string name="settings_converting_description">Converting minimum distance units. Values above 9999 are reset to
        9999. The settings screen will now reload.
    </string>
    <string name="pref_logging_title">Kaydetme Özellikleri</string>
    <string name="log_gpx_title">GPX kaydediliyor</string>
    <string name="log_gpx_summary">Creates a GPX file in the GPSLogger folder on the SD card.</string>
    <string name="log_kml_title">KML kaydediliyor</string>
    <string name="log_kml_summary">Creates a KML file in the GPSLogger folder on the SD card.</string>
    <string name="log_plain_text_title">Log to Plain Text</string>
    <string name="log_plain_text_summary">Creates a plain text file in the GPSLogger folder on the SD card.</string>
    <string name="new_file_creation_title">New file creation</string>
    <string name="new_file_creation_summary">Whether to create a new file once a day or each time you start.</string>
    <string name="new_file_creation_onceaday">Once a day</string>
    <string name="new_file_creation_everystart">Every time I start</string>
    <string name="new_file_creation_static">Fixed file</string>
    <string name="new_file_static_title">Static file name</string>
    <string name="new_file_static_summary">If you chose to create a fixed file, enter a custom file name</string>
    <string name="pref_performance_title">Performans</string>
    <string name="prefer_celltower_title">Baz istasyonunu tercih et</string>
    <string name="prefer_celltower_summary">Uses celltowers rather than satellites. Less accurate, but saves more
        battery.
    </string>
    <string name="time_before_logging_title">Time before logging</string>
    <string name="time_before_logging_summary">Use 0 for maximum frequency, but slower is better for battery life.
    </string>
    <string name="time_before_logging_dialog_title">Time in seconds</string>
    <string name="time_before_logging_hint">Enter seconds (max 9999)</string>
    <string name="keep_fix_summary">Be careful, this will dramatically decrease the battery life. Use only for
        higher precision with low frequencies.
    </string>
    <string name="keep_fix_title">Keep GPS on between fixes</string>
    <string name="retry_time_title">Time interval for accuracy</string>
    <string name="retry_time_summary">Use 0 for maximum frequency, but slower is better for battery life.
    </string>
    <string name="retry_time_dialog_title">Time in seconds</string>
    <string name="retry_time_hint">Enter seconds (max 9999)</string>
    <string name="distance_before_logging_title">Distance before logging</string>
    <string name="distance_before_logging_summary">How far to travel before logging the next point. Use 0 to log all
        points.
    </string>
    <string name="accuracy_before_logging_title">Accuracy before logging</string>
    <string name="accuracy_before_logging_summary">Which min. accuracy to for logging. Use 0 to log all
        points.
    </string>
    <string name="timeout_time_title">Timeout</string>
    <string name="timeout_time_summary">How long the GPS stays on looking for a fix before giving up. Use 0 for no timeout</string>
    <string name="timeout_time_dialog_title">Time in seconds</string>
    <string name="timeout_time_hint">Enter seconds (max 9999)</string>
    <string name="useimperial_title">Use Imperial units</string>
    <string name="useimperial_summary">Use feet, miles and pints, none of that newfangled metric stuff.</string>
    <string name="show_notification_title">Show Notification</string>
    <string name="show_notification_summary">Displays a reminder along with coordinates in the notification bar.
    </string>
    <string name="enabledisablegps_title">Enable/Disable GPS</string>
    <string name="enabledisablegps_summary">Go to the phone settings to enable or disable the providers.</string>
    <string name="startonbootup_title">Start on bootup</string>
    <string name="startonbootup_summary">Launch app and start logging when phone starts</string>
    <string name="autoemail_title">Auto Email Setup</string>
    <string name="autoemail_summary">Automatically emails the log file to an address of your choice</string>
    <string name="please_wait">Lütfen Bekleyin.</string>
    <string name="autoemail_autosend">Enable emails</string>
    <string name="menu_upload">Upload</string>
    <string name="email_upload">Email a file</string>
    <string name="menu_email_now">Auto Send Now</string>
    <string name="ftp_upload">FTP upload</string>
    <string name="menu_faq">Help and FAQ</string>
</resources>